objects/Territory__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Portfolios__c</fullName>
        <description>populated by a declarative roll up summary</description>
        <inlineHelpText>Number of portfolios related to this territory</inlineHelpText>
        <label>Number of Portfolios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegionID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>RegionID__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display name (text)</inlineHelpText>
        <label>Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Senior Sales Exec of Territory</inlineHelpText>
        <label>Territory Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Display Name for Territory, something user friendly to user</description>
        <inlineHelpText>Display name (text)</inlineHelpText>
        <label>Territory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Territory</label>
    <nameField>
        <label>Territory</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Territory_Sales_Manager__c</columns>
        <columns>RegionID__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>